feat: Local kitty background

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1384,7 +1384,7 @@ window_margin_width 5
 #: decrease_background_opacity) or the remote control facility.
 #: Changing this option by reloading the config is not supported.
 
-background_image https://github.com/bdevop/dotfiles/blob/main/dot_config/kitty/mountains-terminal-2.png?raw=true
+background_image /home/$USER/.local/share/chezmoi/dot_config/kitty/mountains-terminal-2.png
 
 #: Path to a background image. Must be in PNG/JPEG/WEBP/TIFF/GIF/BMP
 #: format. Note that when using auto_color_scheme
